Try to make login with token but not realy working

--- a/back-end-plante/appsettings.json
+++ b/back-end-plante/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValidIssuer": "https://localhost:7145",
+    "ValidAudience": "https://localhost:4200",
+    "Secret": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyZWFzb24iOiJjJ2VzdCBtb24gc2VjcmV0In0.lg01fSPis2lpfzQP6kJvu86UGaj_0Wo8qQq3a_APGbw"
+  }
 }
