--- a/back-end-plante/back-end-plante.csproj
+++ b/back-end-plante/back-end-plante.csproj
@@ -10,7 +10,9 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.16" />
+        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.29.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.29.0" />
     </ItemGroup>
 
 </Project>
