--- a/back-end-plante/Properties/launchSettings.json
+++ b/back-end-plante/Properties/launchSettings.json
@@ -16,7 +16,8 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7271;http://localhost:5236",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "MONGODB_URI": "mongodb+srv://MsprPlanteAcces:e2t3Qzcz3s2rrzmf@cluster0.1gpxzxs.mongodb.net/?retryWrites=true&w=majority"
       }
     },
     "IIS Express": {
