--- a/back-end-plante/back-end-plante.csproj
+++ b/back-end-plante/back-end-plante.csproj
@@ -16,4 +16,8 @@
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.29.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Common" />
+    </ItemGroup>
+
 </Project>
