--- a/back-end-plante/Properties/launchSettings.json
+++ b/back-end-plante/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:4545;http://localhost:5236",
+      "applicationUrl": "http://localhost:8888;http://localhost:5236",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "MONGODB_URI": "mongodb+srv://MsprPlanteAcces:e2t3Qzcz3s2rrzmf@cluster0.1gpxzxs.mongodb.net/?retryWrites=true&w=majority"
