--- a/back-end-plante/Properties/launchSettings.json
+++ b/back-end-plante/Properties/launchSettings.json
@@ -17,7 +17,7 @@
       "applicationUrl": "http://localhost:8888;http://localhost:5236",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "MONGODB_URI": "mongodb+srv://MsprPlanteAcces:e2t3Qzcz3s2rrzmf@cluster0.1gpxzxs.mongodb.net/?retryWrites=true&w=majority"
+        "MONGODB_URI": "mongodb+srv://MsprArosa-jeAcces:U40xhqDKmJDwlxhD@mspr.iq3sazy.mongodb.net"
       }
     },
     "IIS Express": {
